# dage_gpu

./: .gitignore  README.md  pyproject.toml
configs/: accelerate_config.yaml  accelerate_single_gpu.yaml  ds_config_zero2.json  ds_config_zero3.json
docs/: PLAN.md
scripts/: run_quick_test.sh  run_single_gpu.sh  run_train.sh
src/: train.py
tests/: conftest.py  test_train.py
